--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "build": "esbuild ./src/extension.ts --bundle --outfile=dist/index.js --external:vscode --format=cjs --platform=node --minify",
     "package": "vsce package --no-dependencies",
     "publish": "vsce publish --no-dependencies",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "release": "standard-version"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
@@ -84,6 +85,7 @@
     "esbuild": "^0.17.19",
     "eslint": "^8.39.0",
     "glob": "^8.1.0",
+    "standard-version": "^9.5.0",
     "typescript": "^5.0.4",
     "vitest": "^0.31.4"
   }
