--- a/package.json
+++ b/package.json
@@ -82,11 +82,15 @@
     "@typescript-eslint/parser": "^5.59.1",
     "@vscode/test-electron": "^2.3.0",
     "@vscode/vsce": "^2.19.0",
+    "acorn": "^8.8.2",
     "esbuild": "^0.17.19",
     "eslint": "^8.39.0",
     "glob": "^8.1.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.0.4",
     "vitest": "^0.31.4"
+  },
+  "dependencies": {
+    "acorn-loose": "^8.3.0"
   }
 }
